<resources>
    <string name="com.crashlytics.android.build_id">ee12a4ba-a920-4854-9265-3cb0abad3b0b</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="action_mark_screenshot">Mark Screenshot</string>
    <string name="action_mark_viewed">Mark Viewed</string>
    <string name="action_reply">Reply</string>
    <string name="action_save">Save</string>
    <string name="action_send_as_snap">Send as Snap</string>
    <string name="action_share">Share</string>
    <string name="info_developed_by">Developed by Liam Cottle</string>
    <string name="info_loading">Casper is Loading</string>
    <string name="info_one_moment">One moment</string>
    <string name="pref_autosave_snaps_sent_title">That you Send</string>
    <string name="pref_autosave_snaps_when_downloaded_title">When Downloaded</string>
    <string name="pref_autosave_snaps_when_opened_title">When Opened</string>
    <string name="pref_autosave_stories_when_downloaded_title">When Downloaded</string>
    <string name="pref_autosave_stories_when_opened_title">When Opened</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_autodownload">Auto Download</string>
    <string name="pref_category_autosave">Auto Save</string>
    <string name="pref_category_autosave_snaps">Auto Save Snaps</string>
    <string name="pref_category_autosave_stories">Auto Save Stories</string>
    <string name="pref_category_autoview">Auto View</string>
    <string name="pref_category_camera">Camera</string>
    <string name="pref_category_display">Display</string>
    <string name="pref_category_experimental">Experimental Features</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_category_snapchat">Snapchat Settings</string>
    <string name="pref_category_snapchat_account">Account</string>
    <string name="pref_category_snapchat_who_can">Who Can...</string>
    <string name="pref_category_storage">Storage</string>
    <string name="pref_device_type_title">Device Type</string>
    <string name="pref_display_circle_story_icons_title">Circle Story Icons</string>
    <string name="pref_display_live_events_summary">Events added by Snapchat</string>
    <string name="pref_display_live_events_title">Live Events</string>
    <string name="pref_display_snap_duration_summary">Circle in corner showing Seconds</string>
    <string name="pref_display_snap_duration_title">Snap Duration</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_notifications_check_interval_summary">Check for new Snaps: %s</string>
    <string name="pref_notifications_check_interval_title">Check Interval</string>
    <string name="pref_notifications_enable_title">Enable</string>
    <string name="pref_notifications_led_title">LED</string>
    <string name="pref_notifications_sound_title">Sound</string>
    <string name="pref_notifications_vibrate_title">Vibrate</string>
    <string name="pref_settings_auto_download_snaps">pref_settings_auto_download_snaps</string>
    <string name="pref_settings_auto_download_stories">pref_settings_auto_download_stories</string>
    <string name="pref_settings_auto_mark_viewed_snaps_open">pref_settings_auto_mark_viewed_snaps_open</string>
    <string name="pref_settings_auto_mark_viewed_stories_open">pref_settings_auto_mark_viewed_stories_open</string>
    <string name="pref_settings_auto_save_sent_snaps">pref_settings_auto_save_sent_snaps</string>
    <string name="pref_settings_auto_save_snaps">pref_settings_auto_save_snaps</string>
    <string name="pref_settings_auto_save_snaps_open">pref_settings_auto_save_snaps_open</string>
    <string name="pref_settings_auto_save_stories">pref_settings_auto_save_stories</string>
    <string name="pref_settings_auto_save_stories_open">pref_settings_auto_save_stories_open</string>
    <string name="pref_settings_blackberry_mode">pref_settings_blackberry_mode</string>
    <string name="pref_settings_bluestacks_mode">pref_settings_bluestacks_mode</string>
    <string name="pref_settings_custom_video_thumbnail">pref_settings_custom_video_thumbnail</string>
    <string name="pref_settings_default_camera">pref_settings_default_camera</string>
    <string name="pref_settings_enable_notifications">pref_settings_enable_notifications</string>
    <string name="pref_settings_experimental_background_uploads">pref_settings_experimental_background_uploads</string>
    <string name="pref_settings_experimental_send_quick_launch">pref_settings_experimental_send_quick_launch</string>
    <string name="pref_settings_experimental_swipe_stories">pref_settings_experimental_swipe_stories</string>
    <string name="pref_settings_hide_live_events">pref_settings_hide_live_events</string>
    <string name="pref_settings_hide_viewer_toolbar">pref_settings_hide_viewer_toolbar</string>
    <string name="pref_settings_location_updates">pref_settings_location_updates</string>
    <string name="pref_settings_media_clear_cache">pref_settings_media_clear_cache</string>
    <string name="pref_settings_media_folder">pref_settings_media_folder</string>
    <string name="pref_settings_notifications_interval">pref_settings_notifications_interval</string>
    <string name="pref_settings_privacy_snaps">pref_settings_privacy_snaps</string>
    <string name="pref_settings_privacy_stories">pref_settings_privacy_stories</string>
    <string name="pref_settings_remember_password">pref_settings_remember_password</string>
    <string name="pref_settings_select_documents_app">pref_settings_select_documents_app</string>
    <string name="pref_settings_show_circle_story_icons">pref_settings_show_circle_story_icons</string>
    <string name="pref_settings_show_view_time">pref_settings_show_view_time</string>
    <string name="pref_settings_updates_beta">pref_settings_updates_beta</string>
    <string name="pref_snapchat_account_clear_conversations_title">Clear Conversations</string>
    <string name="pref_snapchat_who_can_send_me_snaps_title">Send Me Snaps</string>
    <string name="pref_snapchat_who_can_view_my_story_title">View My Story</string>
    <string name="pref_sub_categories">Categories</string>
    <string name="pref_sub_category_device">Device</string>
    <string name="pref_sub_category_other">Other</string>
    <string name="title_about">About</string>
    <string name="title_about_version">Version</string>
    <string name="title_account">Account</string>
    <string name="title_account_stats">Account Stats</string>
    <string name="title_announcements">Latest Announcements</string>
    <string name="title_auto_mark_viewed">Auto Mark Viewed</string>
    <string name="title_auto_mark_viewed_snaps_open">Snaps when Opened</string>
    <string name="title_auto_mark_viewed_stories_open">Stories when Opened</string>
    <string name="title_auto_save_sent_snaps">Save Sent Snaps</string>
    <string name="title_auto_save_snaps">Save Snaps after Downloading</string>
    <string name="title_auto_save_snaps_open">Save Snaps when Opened</string>
    <string name="title_auto_save_stories">Save Stories after Downloading</string>
    <string name="title_auto_save_stories_open">Save Stories when Opened</string>
    <string name="title_auto_saving">Auto Saving</string>
    <string name="title_camera">Camera</string>
    <string name="title_chat">Chat</string>
    <string name="title_check_update">Check for Update</string>
    <string name="title_choose_account">Choose Account</string>
    <string name="title_clear_conversations">Clear Conversations</string>
    <string name="title_default_camera">Default Camera</string>
    <string name="title_default_camera_summary">Choose camera to launch when Camera icon pressed.</string>
    <string name="title_display">Display</string>
    <string name="title_enable_notifications">Enable</string>
    <string name="title_experimental">Experimental</string>
    <string name="title_experimental_background_uploads">Background Uploads</string>
    <string name="title_experimental_background_uploads_summary">Snaps will upload in the background. This is still in development.</string>
    <string name="title_experimental_send_quick_launch">Quick Launch</string>
    <string name="title_experimental_send_quick_launch_summary">Show floating button to quickly launch Camera or Gallery.</string>
    <string name="title_experimental_swipe_stories">Swipe Stories</string>
    <string name="title_experimental_swipe_stories_summary">Swipe up and down through Stories.</string>
    <string name="title_hide_live_events">Hide Live Events</string>
    <string name="title_hide_live_events_summary">Live Events will be hidden from the Stories list</string>
    <string name="title_hide_viewer_toolbar">Hide Viewer Toolbar</string>
    <string name="title_hide_viewer_toolbar_summary">Hide Toolbar when Snap opened. (Tap to show it)</string>
    <string name="title_inject_snapchat_session">Inject Snapchat Session</string>
    <string name="title_location_updates">Location Updates</string>
    <string name="title_location_updates_summary">Enable to update GeoFilters by Location</string>
    <string name="title_media_clear_cache">Clear Cache</string>
    <string name="title_media_clear_cache_summary">Clear temp files and Restart.</string>
    <string name="title_media_folder">Casper Directory</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notifications_interval">Check Interval</string>
    <string name="title_notifications_interval_summary">Interval to check server for new Snaps.</string>
    <string name="title_other">Other</string>
    <string name="title_other_auto_download_snaps">Auto Download Snaps</string>
    <string name="title_other_auto_download_stories">Auto Download Stories</string>
    <string name="title_other_blackberry_mode">BlackBerry Mode</string>
    <string name="title_other_blackberry_mode_summary">Enable this if you are using a BlackBerry device.</string>
    <string name="title_other_bluestacks_mode">BlueStacks Mode</string>
    <string name="title_other_bluestacks_mode_summary">Enable this if you are using BlueStacks.</string>
    <string name="title_other_custom_video_thumbnail">Custom Video Thumbnail</string>
    <string name="title_other_select_documents_app">Show Document Chooser</string>
    <string name="title_other_select_documents_app_summary">Gallery button will ask to open Gallery or Documents</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_privacy_snaps">Send me Snaps</string>
    <string name="title_privacy_stories">View my Story</string>
    <string name="title_remember_password">Remember Snapchat Password</string>
    <string name="title_remember_password_summary">Auto-Fill password when logged out by Snapchat server</string>
    <string name="title_remove_google_account">Remove Google Account</string>
    <string name="title_remove_snapchat_accounts">Remove all Snapchat Accounts</string>
    <string name="title_send_camera">Launch Camera</string>
    <string name="title_send_gallery">Choose from Gallery</string>
    <string name="title_session_authtoken">Session AuthToken</string>
    <string name="title_show_circle_story_icons">Circle Story Icons</string>
    <string name="title_show_view_time">Snap/Story Time</string>
    <string name="title_snapchat_session">Use Snapchat Session (ROOT)</string>
    <string name="title_storage">Storage</string>
    <string name="title_terms_of_use">Terms of Use</string>
    <string name="title_updates">Updates</string>
    <string name="title_updates_beta">Get BETA updates</string>
    <string name="title_updates_beta_summary">If I push an update with experimental features you will be notified just like a normal update.</string>
    <string name="title_view_snaptag">My SnapTag</string>
</resources>