<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_choose_account" android:id="@id/action_choose_account" android:title="@string/title_choose_account" app:showAsAction="always" />
    <item android:id="@id/action_blackberry_mode" android:title="@string/title_other_blackberry_mode" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/action_bluestacks_mode" android:title="@string/title_other_bluestacks_mode" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/action_check_update" android:title="@string/title_check_update" app:showAsAction="never" />
    <item android:id="@id/action_feed" android:title="@string/title_announcements" app:showAsAction="never" />
    <item android:id="@id/action_snapchat_session" android:title="@string/title_snapchat_session" app:showAsAction="never" />
    <item android:id="@id/action_remove_google_account" android:title="@string/title_remove_google_account" app:showAsAction="never" />
    <item android:id="@id/action_remove_snapchat_accounts" android:title="@string/title_remove_snapchat_accounts" app:showAsAction="never" />
    <item android:id="@id/action_terms_of_use" android:title="@string/title_terms_of_use" app:showAsAction="never" />
</menu>