<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/layout" android:background="@color/theme_primary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:layout_width="125.0dip" android:layout_height="125.0dip" android:src="@drawable/ic_casper_launcher" />
        <TextView android:textSize="22.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_loading" />
        <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/info_one_moment" />
    </LinearLayout>
    <TextView android:textSize="16.0dip" android:textColor="@color/white" android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/info_developed_by" />
</FrameLayout>